Fixed flexbox spacing vertically, added content container

--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@ body {
     justify-content: space-between;
     min-height: 100vh;
     margin: 0;
+    overflow: hidden;
+    
+}
+
+.content {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-around;
+    
 }
 
 .header {
@@ -12,9 +22,9 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 50px;
-    flex: 0 1 auto;
-    padding: 0 200px;
+    max-height: 50px;
+    padding: 10px 200px;
+    
 }
 
 .logo {
@@ -33,8 +43,8 @@ ul {
     background-color: #1F2937;
     color: white;
     display: flex;
-    flex: 1 1 0;
-    padding: 50px 200px;
+    flex: 1;
+    padding: 0 200px;
     justify-content: space-between;
     align-items: center;
     gap: 40px;
@@ -54,8 +64,10 @@ img {
 .second-row {
     display: flex;
     flex-direction: column;
-    flex: 1 1 0;
-    padding: 100px 200px;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+    padding: 0 200px;
 }
 
 .title-two {
@@ -68,6 +80,9 @@ img {
 .title-two-info {
     display: flex;
     justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 20px;
 }
 
 .small-fantasy {
@@ -83,22 +98,22 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 100px 200px;
-    flex: 1 1 0;
+    flex: 1;
+    padding: 0 200px;
 }
 
 .fourth-row {
     padding: 50px;
     margin: 50px;
     display: flex;
-    flex: 1 1 0;
+    flex: 1;
     justify-content: space-between;
     align-items: center;
     background-color: #3882F6;
     color: white;
     border-radius: 8px;
-    padding: 50px 100px;
-    margin: 100px 200px;
+    padding: 0 100px;
+    margin: 5px 200px;
 }
 .quote {
     font-size: 36px;
@@ -122,8 +137,8 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 50px;
-    flex: 1;
+    max-height: 100px;
+    flex: 1 0 0;
 }
 
 button {
